--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,11 +18,11 @@ li a {
 }
 
 li a:hover {
-  background-color: #30f8ff;
+  background-color: #fcff30;
 }
 
 .activo {
-  background-color: #20b5c9;
+  background-color: #b0c920;
 }
 
 .derecha {
@@ -32,7 +32,7 @@ li a:hover {
 .miJumbo {
   margin-top: 1rem;
   padding: 32px 16px;
-  background-color: #22fcfc;
+  background-color: #e6fc22;
   border-radius: 0.5rem;
   text-align: center;
 }
@@ -47,5 +47,5 @@ li a:hover {
   padding: 12px 30px;
   text-decoration: none;
   color: #e9ecef;
-  background-color: rgb(0, 238, 255);
+  background-color: rgb(179, 255, 0);
 }
